--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-Flask
-Flask-Session
-psycopg2-binary
-SQLAlchemy
+Flask==1.1.1
+Flask-Session==0.3.1
+psycopg2-binary==2.8.4
+SQLAlchemy==1.3.15
+passlib==1.7.2
+itsdangerous==1.1.0
+Jinja2==2.11.1
+gunicorn==20.0.4
+requests==2.23.0
